<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <groupId>me.wiefferink</groupId>
  <artifactId>areashop-parent</artifactId>
  <packaging>pom</packaging>
  <version>2.6.0-SNAPSHOT</version>
  <name>AreaShop Parent</name>
  <url>https://github.com/NLthijs48/AreaShop</url>

  <licenses>
    <license>
      <name>GNU General Public License v3.0</name>
      <url>https://www.gnu.org/licenses/gpl-3.0.en.html</url>
      <distribution>repo</distribution>
    </license>
  </licenses>

  <issueManagement>
    <url>https://github.com/NLthijs48/AreaShop/issues</url>
    <system>GitHub Issues</system>
  </issueManagement>

  <ciManagement>
    <system>Jenkins</system>
    <url>https://jenkins.wiefferink.me/job/AreaShop</url>
  </ciManagement>

  <repositories>
    <repository>
      <id>enginehub-maven</id>
      <url>https://maven.enginehub.org/repo/</url>
    </repository>
    <repository>
      <id>bstats-repo</id>
      <url>https://repo.bstats.org/content/repositories/releases/</url>
    </repository>
    <repository>
      <id>jitpack.io</id>
      <url>https://jitpack.io</url>
    </repository>
    <repository>
      <id>wiefferink-repo</id>
      <url>http://maven.wiefferink.me</url>
    </repository>
  </repositories>

  <properties>
    <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
    <java.version>16</java.version>
    <maven.compiler.source>16</maven.compiler.source>
    <maven.compiler.target>16</maven.compiler.target>
    <build.number>#CUSTOM</build.number>
  </properties>

  <modules>
    <module>areashop-interface</module>
    <module>areashop-worldguard-7</module>
    <module>areashop-worldedit-7</module>
    <module>AreaShop</module>
  </modules>

</project>
